# FablestarExpanseMUD

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
admin-ui/: package-lock.json  package.json  vite.config.js
admin-ui/src/: AdminThemeContext.jsx  App.jsx  PlayerAccountsTab.jsx  ProficienciesPage.jsx  adminTheme.js  apiConfig.js  index.css  main.jsx
admin-ui/src/builder/: BuilderSearchPanel.jsx  ExitEdge.jsx  GalaxyView.jsx  RoomNode.jsx  RoomPropertyPanel.jsx  ShipEditor.jsx  SurfaceView.jsx  SystemView.jsx  ValidationPanel.jsx  WorldBuilderPage.jsx  ZoneEditor.jsx  builder.css  builderConstants.js
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_character_portrait.py  b3c4d5e6f7a8_account_echo_credits.py  d5e6f7a8b9c0_character_digi_balance.py  ec5a13557ef4_initial.py  f2a8c1d9e0b1_admin_staff.py  f6e7d8c9b0a1_character_pvp_reputation.py  g7h8i9j0k1l2_account_is_gm.py  h1i2j3k4l5m6_character_last_scene_image.py  j3k4l5m6n7o8_account_scene_gallery.py
config/: comfyui.example.toml  comfyui.toml  comfyui_area_workflow.example.json  comfyui_area_workflow.json  comfyui_character_portrait_workflow.json  comfyui_portrait_workflow.example.json  comfyui_scene_workflow.json  comfyui_zimage_portrait.example.json  database.example.toml  server.example.toml
content/proficiencies/: catalog.json  leaf_descriptions.json  manifest.yaml
content/proficiencies/mouseover/: astronautics.pipe.txt  combat.pipe.txt  commerce.pipe.txt  culture.pipe.txt  fabrication.pipe.txt  interface.pipe.txt  medicine.pipe.txt  resonance.pipe.txt  signal.pipe.txt  systems.pipe.txt  traversal.pipe.txt
content/world/: galaxy.yaml
content/world/entities/: stalker.yaml
content/world/items/: resonance_shard.yaml
content/world/ships/: corvette.yaml
content/world/systems/: nebula1.yaml  sol_prime.yaml  test.yaml  vega_reach.yaml  void_terminus.yaml
player-ui/: index.html  package-lock.json  package.json  vite.config.js
player-ui/src/: App.jsx  ChargenProficienciesStep.jsx  ChargenSkillPicker.jsx  GmBadge.jsx  PlayThemeContext.jsx  ReputationThermometer.jsx  ThemeToggleButton.jsx  index.css  main.jsx  playApi.js  portraitProfile.js  theme.js
player-ui/src/mud/: 00-ctx.jsx  01-primitives.jsx  02-entity.jsx  03-narrative.jsx  04-panels-a.jsx  05-minimap.jsx  06-panels-b.jsx  07-proficiencies-panel.jsx  FablestarClient.jsx
prompts/: combat_narration.j2  forge_area_image_prompt.j2  forge_generic.j2  forge_portrait_character_prompt.j2  forge_room.j2  play_scene_image_prompt.j2  room_description.j2
scripts/: bootstrap_admin.py  compile_proficiency_mouseover.py  ensure_test_user.py  write_proficiency_catalog_json.py
src/fablestar/: __init__.py  __main__.py  app.py  server.py
src/fablestar/admin/: __init__.py  admin_security.py  content_browser.py  host_metrics.py  llm_persist.py  nexus.py  player_accounts.py  staff_service.py  world_live.py
src/fablestar/commands/: __init__.py  admin.py  combat.py  info.py  (+5 more)
tests/: test_proficiencies.py
worldforge/: index.html  package-lock.json  package.json  vite.config.js
worldforge/src/: App.jsx  ThemeContext.jsx  index.css  main.jsx  theme.js
worldforge/src-tauri/: Cargo.toml  tauri.conf.json
(+98 files in other folders)
