[project]
name = "fablestar"
version = "0.2.0"
description = "Vibe-coded MUD platform with LLM integration and hot-reload."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.5.0",
    "jinja2>=3.1.0",
    "watchdog>=3.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "bcrypt>=4.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "httpx>=0.26.0",
    "openai>=1.12.0",
    "psutil>=5.9.0",
    "PyYAML>=6.0.0",
    "SQLAlchemy>=2.0.0",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",
]

[project.scripts]
fablestar = "fablestar.__main__:main"
scaffold = "cli.scaffold:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (undefined names, unused imports)
    "I",      # isort (import ordering)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs/design issues)
    "C4",     # flake8-comprehensions (simplify list/dict/set)
    "ASYNC",  # flake8-async (async best practices)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults (FastAPI depends on it)
    "B904",   # raise from inside except — not always practical
    "RUF012", # mutable class variables — SQLAlchemy patterns trigger this
]

[tool.ruff.lint.isort]
known-first-party = ["fablestar"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Start with basic checks; tighten gradually as type coverage improves
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["fablestar.admin.*", "fablestar.commands.*"]
# These modules use dynamic patterns (registry, app_instance) that mypy struggles with
ignore_errors = true
